Added Campaigns page completely working

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -41,3 +41,8 @@ body {
     font-weight: bold;
     border: solid #184486 2px;
 }
+.MainArea button:hover{
+    background-color: #184486;
+    color: white;
+
+}
