--- a/src/app/components/campaigns/campaigns.component.html
+++ b/src/app/components/campaigns/campaigns.component.html
@@ -1,1 +1,11 @@
-
+<div class="Container">
+    <app-navbar/>
+    <div class="Content">
+      <div *ngFor="let event of EventsList" class="CampaignBox">
+         <img src={{event.img}}/>
+         <h3>{{event.title}}</h3>
+         <p>{{event.description}}</p>
+      </div>
+    </div>
+    
+</div>
