Added routes to Login and Logout page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
                 <input name="password" type="password"/>
             </section>
             <p ><a href="#">Forgot Password?</a></p>
-            <button>Login</button>
+            <button routerLink="/campaign">Login</button>
         </div>
 
     </div>
