--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,6 @@
     <img src="karmyogi_logo.png" height="60px">
     <div class="MainArea">
         <h2>{{Campaigns}}</h2>
-        <button>Logout</button>
+        <button routerLink="/">Logout</button>
     </div>
 </div>
