redesigned the template selection cards

--- a/src/app/components/template-selector/template-selector.component.css
+++ b/src/app/components/template-selector/template-selector.component.css
@@ -1,4 +1,3 @@
-/* template-selector.component.css */
 
 body {
   font-family: Arial, sans-serif; /* Default font for the entire body */
@@ -55,6 +54,18 @@ body {
   cursor: pointer;
   font-family: 'Roboto Mono', monospace;
 }
+.CardUpper{
+  display: flex;
+  justify-content: space-between;
+}
+.CardUpper input[type="radio"]{
+  accent-color: black;
+  transform: scale(1.5);
+  height: 20px;
+  width: 13px;
+  margin-top: 1.25rem;
+  margin-left: 4rem;
+}
 
 .SubmitButton {
   display: flex;
@@ -83,5 +94,6 @@ body {
 }
 
 :host ::ng-deep .highlight {
-    color: red;
+    color: #1B4CA1;
+    font-weight: 500;
   }
