minor css changes

--- a/src/app/components/template-selector/template-selector.component.css
+++ b/src/app/components/template-selector/template-selector.component.css
@@ -11,13 +11,15 @@ body {
 }
 
 .Upper h2 {
-  padding-inline: 1.5rem;
+  margin-inline: 3rem;
+  padding-inline: 0.5rem;
 }
 
 .Header {
   display: flex;
   justify-content: space-between;
   padding-inline: 1.5rem;
+  margin-inline:2rem;
 }
 
 .Header button {
@@ -42,7 +44,26 @@ body {
   display: flex;
   overflow-x: auto;
   gap: 1.5rem;
-  padding: 1.5rem;
+  margin-inline:3rem;
+}
+
+/*These are the properties for scrollbar*/
+.CardsSection::-webkit-scrollbar {
+  height: 12px; /* Height of the horizontal scrollbar */
+}
+
+.CardsSection::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background of the scrollbar track */
+  border-radius: 10px; /* Rounded edges for the scrollbar track */
+}
+
+.CardsSection::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scroller */
+  border-radius: 10px; /* Rounded edges for the scroller */
+}
+
+.CardsSection::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scroller on hover */
 }
 
 .Card {
@@ -53,6 +74,10 @@ body {
   padding-inline: 1rem;
   cursor: pointer;
   font-family: 'Roboto Mono', monospace;
+  margin-bottom: 2rem;
+}
+.Card:hover{
+  background-color:#d4d9e0;
 }
 .CardUpper{
   display: flex;
