added fully functional routing for campaign->mediumSelect->templateSelect->useTemplate with dynamic content generation

--- a/src/app/components/template-selector/template-selector.component.html
+++ b/src/app/components/template-selector/template-selector.component.html
@@ -3,7 +3,7 @@
 <app-navbar></app-navbar>
 <div class="Container">
     <div class="Upper">
-        <h2>{{ serviceTitle }}</h2>
+        <h2>{{ selectedMedium }} Service</h2>
         <div class="Header">
             <h3>Choose Template --></h3>
             <button>New Template</button>
