Implement CreateNewTemplate component with initial UI and styling

--- a/src/app/components/template-selector/template-selector.component.html
+++ b/src/app/components/template-selector/template-selector.component.html
@@ -6,7 +6,7 @@
         <h2>{{ selectedMedium }} Service</h2>
         <div class="Header">
             <h3>Choose Template --></h3>
-            <button>New Template</button>
+            <button  (click)="createtemplate()">New Template</button>
         </div>
     </div>
     <div class="Lower">
