--- a/src/app/components/medium-selector/medium-selector.component.html
+++ b/src/app/components/medium-selector/medium-selector.component.html
@@ -5,19 +5,19 @@
     <div class="Option" (click)="selectMedium('Email')">
       <input type="radio" name="communicationMethod" [checked]="selectedMedium=='Email'" />
       <p>Email</p>
-      <img src="email.png" alt="Email"  />
+      <img src="email.png" alt="Email" height="30px" />
     </div>
 
     <div class="Option" (click)="selectMedium('WhatsApp')">
       <input type="radio" name="communicationMethod" [checked]="selectedMedium=='WhatsApp'"/>
       <p>Whatsapp</p>
-      <img src="whatsapp.png" alt="Whatsapp" />
+      <img src="whatsapp.png" alt="Whatsapp" height="55px" class="whatsapp"/>
     </div>
 
     <div class="Option" (click)="selectMedium('SMS')">
       <input type="radio" name="communicationMethod" [checked]="selectedMedium=='SMS'"/>
       <p>SMS</p>
-      <img src="sms.png" alt="SMS" />
+      <img src="sms.png" alt="SMS" height="30px" />
     </div>
 
     <button [disabled]="!selectedMedium" (click)="submitHandler()">Submit</button>
