--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
@@ -2,6 +2,6 @@
     <img routerLink="/campaign" src="karmyogi_logo.png" height="60px">
     <div class="MainArea">
         <h2>{{Campaigns}}</h2>
-        <button routerLink="/">Logout</button>
+        <button (click)="logout()">Logout</button>
     </div>
 </div>
