--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.css
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.css
@@ -5,7 +5,8 @@ body {
 .Container {
     display: flex;
     justify-content: space-around;
-    padding: 10px;
+    align-items: center;
+    padding: 20px 10px;
     padding-inline: 15px;
     width: vw;
     background-color: #FDE5CD;
