--- a/Front-end/src/app/components/medium-select-dialog/medium-select-dialog.component.html
+++ b/Front-end/src/app/components/medium-select-dialog/medium-select-dialog.component.html
@@ -1,5 +1,6 @@
 <div class="backdrop" *ngIf="Open" (click)="closeDetails()">
     <div class="popup" [ngClass]="{'closing': isClosing}" (click)="$event.stopPropagation()">
+        <img src="image.png" class="Closer" (click)="closeDetails()">
         <h1>Select method of communication</h1>
         <div class="MediumsList">
             <div class="Option" (click)="mediumSelect('Email')">
