done with minor but necessary changes

--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="Container">
-    <img routerLink="/campaign" src="karmyogi_logo.png" height="60px">
+    <img routerLink="campaigns" src="karmyogi_logo.png" height="60px">
     <div class="MainArea">
         <h2>{{Campaigns}}</h2>
         <button (click)="logout()">Logout</button>
