made the whatsapp section fully functional including template get/post and send message

--- a/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.css
+++ b/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.css
@@ -91,6 +91,12 @@ body {
     margin-top: 1.25rem;
     margin-left: 4rem;
   }
+  .Approved{
+    color: green;
+  }
+  .Rejected{
+    color: red;
+  }
   
   .SubmitButton {
     display: flex;
@@ -122,4 +128,3 @@ body {
       color: #1B4CA1;
       font-weight: 500;
     }
-  
