--- a/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.html
+++ b/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.html
@@ -24,6 +24,9 @@
                     <span><strong>Name:</strong> {{template.name}}</span>
                 </div>
                 <p [innerHTML]="template.structure.body.text "></p>
+                <p [ngClass]="{'Rejected': template.status === 'REJECTED', 'Approved': template.status === 'APPROVED'}">
+                    {{template.status}}
+                </p> 
             </div>
         </div>
         <div class="SubmitButton">
