--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="Container">
     <img routerLink="campaigns" src="karmyogi_logo.png" height="60px">
-    <div class="MainArea">
-        <h2>{{Campaigns}}</h2>
-        <button (click)="logout()">Logout</button>
+    <div class="Search">
+        <input placeholder="Search for templates">
     </div>
+    <button (click)="logout()">Logout</button>
 </div>
