Added search button and redefined the nav also removed {{}} from template body

--- a/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.css
+++ b/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.css
@@ -147,11 +147,7 @@ body {
   margin-left: 4rem;
 }
 
-.Approved {
-  color: green;
-}
-
-.Rejected {
+:host ::ng-deep .example-text {
   color: red;
 }
 
