--- a/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.html
+++ b/Front-end/src/app/WhatsappModule/Components/Template-Selector/template-selector.component.html
@@ -15,7 +15,7 @@
                 <div>
                     <span><strong>Name:</strong> {{template.name}}</span>
                 </div>
-                <p [innerHTML]="template.structure.body.text"></p>
+                <p [innerHTML]="template.structure.body.text | removeBraces"></p>
             </div>
         </div>
         <button *ngIf="templatesloaded && currentPage!=0" (click)="prevPage()" class="Prev">←</button>
