--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div class="Container">
     <img routerLink="campaigns" src="karmyogi_logo.png" height="60px">
     <div class="Search">
+        <img src="search.png" height="40px">
         <input placeholder="Search for templates">
     </div>
     <button (click)="logout()">Logout</button>
