--- a/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
+++ b/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
@@ -1,22 +1,69 @@
 /* template.component.css */
 .container {
-    padding: 20px;
-  }
-  .row {
-    display: flex;
-    justify-content: space-between;
-  }
-  .col-md-6 {
-    flex: 0 0 48%;
-  }
-  .Template-Preview{
-    background-color: white;
-    height: 200px;
-    border-radius: 10px;
-    padding: 15px;
-    font-size: 19px;
-  }
-  .form-group {
-    margin-top: 15px;
-  }
-  
+  padding: 20px;
+}
+
+.container input {
+  height: 2rem;
+  border-radius: 10px;
+  border: none;
+  padding: 5px;
+  padding-inline: 10px;
+  font-size: 1rem;
+}
+
+.container input:focus {
+  outline: #184486;
+  border: none;
+}
+
+.container button {
+  height: 65%;
+  padding: 10px;
+  margin-top: 3rem;
+  border-radius: 30px;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  color: white;
+  border: solid #184486 2px;
+  background-color: #184486;
+}
+
+.container button:hover {
+  background-color: #0c326c;
+  color: white;
+}
+
+.container button:active {
+  scale: 90%;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.col-md-6 {
+  flex: 0 0 48%;
+}
+
+.Template-Preview {
+  background-color: white;
+  height: 200px;
+  border-radius: 10px;
+  padding: 15px;
+  font-size: 19px;
+}
+
+.fields {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form-group {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
