--- a/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
+++ b/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
@@ -4,7 +4,7 @@
 }
 
 .container input {
-  height: 2rem;
+  height: 1.7rem;
   border-radius: 10px;
   border: none;
   padding: 5px;
@@ -19,6 +19,7 @@
 
 .container button {
   height: 65%;
+  width: 20%;
   padding: 10px;
   margin-top: 3rem;
   border-radius: 30px;
@@ -58,6 +59,11 @@
 .fields {
   display: flex;
   align-items: center;
+  gap: 1rem;
+}
+.form{
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
