--- a/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.html
+++ b/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-6">
       <h3>Fill Template Fields</h3>
-      <form (ngSubmit)="sendMessage()">
+      <form (ngSubmit)="sendMessage()" class="form">
         <div *ngFor="let field of fields; let i = index" class="fields">
           <label for="field{{ i }}">Field {{ i + 1 }}</label>
           <input type="text" id="field{{ i }}" [(ngModel)]="fields[i]" (input)="updatePreview()" name="field{{ i }}"
