--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.html
@@ -4,5 +4,8 @@
         <img src="search.png" height="40px">
         <input placeholder="Search for templates">
     </div>
-    <button (click)="logout()">Logout</button>
+    <div class="LogOut" (click)="logout()">
+        <img src="log-out.png" height="30px">
+        <button >Logout</button>
+    </div>
 </div>
