--- a/Front-end/src/app/modules/admin/components/navbar/navbar.component.css
+++ b/Front-end/src/app/modules/admin/components/navbar/navbar.component.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     padding: 20px 10px;
     padding-inline: 15px;
+    height: 10vh;
     width: vw;
     background-color: #FDE5CD;
 }
