--- a/Front-end/src/app/components/home/home.component.css
+++ b/Front-end/src/app/components/home/home.component.css
@@ -6,7 +6,6 @@ body {
     padding: 0px;
     display: flex;
     height: 100vh;
-    width: fill;
 }
 /* Properties for the lest side of Homepage */
 .left{
@@ -35,6 +34,7 @@ body {
     width: 45%;
     justify-content: center;
     align-items: center;
+    background-color: white;
     gap: 5%;
     font-family: 'Poppins', sans-serif;
 }
@@ -78,4 +78,28 @@ body {
     color: white;
     font-weight: bold;
     cursor: pointer;
+}
+
+
+@media screen and (max-width:1000px) {
+    #container{
+        flex-direction: column;
+    }
+    .left{
+        width: 100%;
+        height: 30vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .Upper{
+        position: relative;
+        top: 0;
+    }
+    .Right{
+        width: 100%;
+        height: 70vh;
+    }
+    
 }
