--- a/Front-end/src/app/modules/admin/components/create-new-template/create-new-template.component.css
+++ b/Front-end/src/app/modules/admin/components/create-new-template/create-new-template.component.css
@@ -7,7 +7,7 @@ body {
     background-color: #FDE5CD;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 90vh;
 }
 
 .Upper h2 {
@@ -43,12 +43,33 @@ body {
 
 .box input {
     border-radius: 5px;
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 100%;
 }
 
 .box textarea {
     border-radius: 5px;
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 100%;
+    border: none;
 }
 
+.box select{
+    border-radius: 5px;
+    border: none;
+    background-color: white;
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 100%;
+}
+
+.box select option{
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 100%;
+}
 
 .CreateButton {
     display: flex;
@@ -82,9 +103,7 @@ body {
 }
 
 .Body.box textarea {
-    width: 100%;
-    box-sizing: border-box;
-    /* Ensures padding and border are included in the element's total width and height */
+    width: 97%;
 }
 
 .form-group {
