--- a/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
+++ b/Front-end/src/app/WhatsappModule/Components/Template-User/template-user.component.css
@@ -19,7 +19,8 @@
 
 .container button {
   height: 65%;
-  width: 20%;
+  width: 40%;
+  margin-inline: auto;
   padding: 10px;
   margin-top: 3rem;
   border-radius: 30px;
@@ -58,18 +59,21 @@
 
 .fields {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 1rem;
 }
 .form{
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 1rem;
+  padding-right: 14rem;
 }
 
 .form-group {
   margin-top: 15px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
