--- a/Front-end/src/app/components/medium-select-dialog/medium-select-dialog.component.css
+++ b/Front-end/src/app/components/medium-select-dialog/medium-select-dialog.component.css
@@ -67,6 +67,7 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+    margin-top: 10px;
     cursor: pointer;
     transition: transform 0.1s ease;
   }
