--- a/Front-end/src/app/email-module/email-menu/email-menu.component.css
+++ b/Front-end/src/app/email-module/email-menu/email-menu.component.css
@@ -25,18 +25,18 @@ p {
 .container-fluid {
     display: flex;
     flex: 1;
-    flex-direction: row; /* Changed to row to align sidebar and main content side by side */
+    flex-direction: row; /*Changed to row to align sidebar and main content side by side*/
     height: 100%;
 }
 
 .row {
     display: flex;
     flex: 1;
-    flex-direction: row; /* Ensure row direction */
+    flex-direction: row;  /*Ensure row direction*/ 
 }
 
 .sidebar {
-    flex: 0 0 200px;
+    flex: 0 0 210px;
     border-right: 1px solid #ccc;
     background-color: #f1f1f1;
     padding-top: 20px;
@@ -78,9 +78,9 @@ p {
 }
 
 .main-content {
-    flex: 1; /* Takes the remaining space */
+    flex: 1;  /*Takes the remaining space*/ 
     padding: 20px;
-    background-color: #fff;
+    background-color: #fde5cd;
     overflow-y: auto;
 }
 
@@ -118,4 +118,7 @@ p {
 
 .border-bottom {
     border-bottom: 1px solid #ccc;
-}
+} 
+
+
+
