--- a/Front-end/src/app/sms-module/sms-menu/sms-menu.component.html
+++ b/Front-end/src/app/sms-module/sms-menu/sms-menu.component.html
@@ -40,7 +40,7 @@
             <!-- Main content -->
             <main class="main-content">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <div *ngIf="selectedMenu === 'default'">Welcome to Smart Email Notifier</div>
+                    <div *ngIf="selectedMenu === 'default'">Welcome to Smart SMS Notifier</div>
                     <app-create-template *ngIf="selectedMenu === 'create-template'"></app-create-template>
                     <app-configure-template *ngIf="selectedMenu === 'configure-template'"></app-configure-template>
                     <app-view-user-data *ngIf="selectedMenu === 'view-user-data'"></app-view-user-data>
