--- a/Front-end/src/app/sms-module/upload-user-data/upload-user-data.component.css
+++ b/Front-end/src/app/sms-module/upload-user-data/upload-user-data.component.css
@@ -10,10 +10,9 @@
   }
   
   .container {
-    max-width: 600px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ddd;
     border-radius: 5px;
   }
   
@@ -54,7 +53,7 @@
   .close {
     padding: 10px 20px;
     border: none;
-    background-color: #007bff;
+    background-color: #0a316c;
     color: white;
     cursor: pointer;
     border-radius: 5px;
@@ -120,3 +119,35 @@
     cursor: pointer;
   }
   
+  .actions button{
+    padding: 10px 20px;
+    background-color: #0a316c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+  }
+
+  .template-content{
+    margin-top: 20px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+  }
+
+  .template-content button{
+    padding: 10px 20px;
+    background-color: #0a316c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    right: 5%;
+    bottom: 10%;
+  }
+
+  .template-content p{
+    margin-top: 20px;
+  }
