--- a/Front-end/src/app/whatsapp-module/edashboard/edashboard.component.html
+++ b/Front-end/src/app/whatsapp-module/edashboard/edashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
   <div class="menu">
-    <app-email-menu></app-email-menu>
+    <app-whatsapp-menu></app-whatsapp-menu>
   </div>
 </div>  
