--- a/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
+++ b/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
@@ -6,7 +6,7 @@
                 <div class="position-sticky">
                     <ul class="nav flex-col">
                         <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'send-message'" (click)="selectMenu('send-message')">Send message</a>
+                            <a class="nav-link" [class.active]="selectedMenu === 'select-template'" (click)="selectMenu('select-template')">Select Template</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'create-template'" (click)="selectMenu('create-template')">Create Template</a>
@@ -15,10 +15,13 @@
                             <a class="nav-link" [class.active]="selectedMenu === 'configure-template'" (click)="selectMenu('configure-template')">Configure Template</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Upload User Data</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">View User Data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Upload User Data</a>
+                            <a class="nav-link" [class.active]="selectedMenu === 'preview-and-send'" (click)="selectMenu('preview-and-send')">Preview and Send</a>
                         </li>
                     </ul>
                 </div>
@@ -27,12 +30,12 @@
             <!-- Main content -->
             <main class="main-content">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <div *ngIf="selectedMenu === 'default'">Welcome to Smart Email Notifier</div>
+                    <app-select-template *ngIf="selectedMenu === 'select-template'"></app-select-template>
                     <app-create-WhatsApp-template *ngIf="selectedMenu === 'create-template'"></app-create-WhatsApp-template>
                     <app-configure-WhatsApp-template *ngIf="selectedMenu === 'configure-template'"></app-configure-WhatsApp-template>
                     <app-view-WhatsApp-user-data *ngIf="selectedMenu === 'view-user-data'"></app-view-WhatsApp-user-data>
                     <app-upload-WhatsApp-user-data *ngIf="selectedMenu === 'upload-user-data'"></app-upload-WhatsApp-user-data>
-                    <app-send-whatsapp *ngIf="selectedMenu === 'send-message'"></app-send-whatsapp>
+                    <app-send-whatsapp *ngIf="selectedMenu === 'preview-and-send'"></app-send-whatsapp>
                 </div>
             </main>
         </div>
