--- a/Front-end/src/app/whatsapp-module/send-whatsapp/send-whatsapp.component.html
+++ b/Front-end/src/app/whatsapp-module/send-whatsapp/send-whatsapp.component.html
@@ -1,36 +1,25 @@
-<div>
-    <div class="Container">
-        <div class="Upper">
-            <h2>Whatsapp Service Templates</h2>
-            <div class="Header">
-                <h3>Choose Template</h3>
-                <button>Create New Template</button>
-            </div>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Template Preview</h3>
+        <div class="Template-Preview">
+          <p>{{ previewText }}</p>
         </div>
-        <div class="Lower">
-            <div class="SubContainer">
-                <div class="CardsSection">
-                    <div class="Card" *ngFor="let template of templates"
-                        (click)="selectTemplate(template)">
-                        <div class="CardUpper">
-                            <div class="TemplateId">
-                                <h3>Template Id</h3>
-                                <h4>{{ template.id }}</h4>
-                            </div>
-                            <input type="radio" name="selectedTemplate" [checked]="selectedTemplateId === template.id"
-                                (click)="onRadioClick(template.id)">
-                            <span class="radio-checkmark"></span>
-                        </div>
-                        <div>
-                            <span><strong>Name:</strong> {{template.name}}</span>
-                        </div>
-                        <p [innerHTML]="template.structure.body.text | removeBraces"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="SubmitButton">
-            <button [disabled]="!selectedTemplateId" (click)="navigate()">Select</button>
-        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Fill Template Fields</h3>
+        <form (ngSubmit)="sendMessage()" class="form">
+          <div *ngFor="let field of fields; let i = index" class="fields">
+            <label for="field{{ i }}">Field {{ i + 1 }}:</label>
+            <input type="text" id="field{{ i }}" [(ngModel)]="fields[i]" (input)="updatePreview()" name="field{{ i }}"
+              class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="recipient">Recipient Number:</label>
+            <input type="text" id="recipient" [(ngModel)]="recipientNumber" name="recipient" class="form-control" />
+          </div>
+          <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
+      </div>
     </div>
-</div>
+  </div>
